Load in affects

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <div class="card" style="border-radius: 15px">
                     <div class="card-body p-4">
                         <div class="d-lg-flex text-black">
-                            <div class="flex-shrink-0 text-center">
+                            <span class="run-animation"><div class="flex-shrink-0 text-center">
                                 <img src="assets\pictures\profilepic.jpg" alt="profile picture" class="img-fluid"
                                     style="width: 180px; border-radius: 10px;" />
-                            </div>
+                            </div></span>
                             <div class="col-sm-9 ms-3 justify-content-center text-lg-start text-center">
-                                <h5 class="mb-1">Dylan Houston</h5>
-                                <h6 class="mb-2 pb-2" style="color: rgb(58, 202, 58)">Amateur Coder</h6>
+                                <span class="run-animation" style="color: black"><h5 class="mb-1">Dylan Houston</h5></span>
+                                <h6 class="mb-2 pb-2" style="color: rgb(58, 202, 58)"><span class="run-animation">Amateur</span> <span class="run-animation"></h6></span>
                                 <div class="d-flex rounded-3 p-3 mb-2" style="background-color: #efefef;">
                                     <div>
                                         <p class="small mb-1 about-card">
@@ -88,10 +88,10 @@
                                 <div class="d-flex pt-1">
                                     <button type="button" class="btn btn-light-sm me-1 flex-grow-1"
                                         onclick="relocate_resume()">
-                                        Résumé
+                                        <span class="run-animation">Resume</span>
                                     </button>
                                     <button type="button" class="btn btn-green flex-grow-1" onclick="relocate_email()">
-                                        Email Me
+                                        <span class="run-animation">Email Me</span>
                                     </button>
                                 </div>
                             </div>
