Center Photo on mobile fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-lg-9">
                 <div class="card" style="border-radius: 15px">
                     <div class="card-body p-4">
-                        <div class="d-lg-flex text-black">
+                        <div class="d-lg-flex text-black text-center">
                             <span class="run-animation"><div class="flex-shrink-0 text-center">
                                 <img src="assets\pictures\profilepic.jpg" alt="profile picture" class="img-fluid"
                                     style="width: 180px; border-radius: 10px;" />
