Fixed Spelling Errors

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                             <span class="run-animation">easier</span>
                                             <span class="run-animation">and</span>
                                             <span class="run-animation">more</span>
-                                            <span class="run-animation">enjoyabe"</span>
+                                            <span class="run-animation">enjoyable"</span>
                                         </p>
                                     </div>
                                 </div>
