More Spelling Fixes and code cleaup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body class="bg-light">
     <!-- NAVIGATION BAR SECTION -->
-    <section id="nabar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-3">
             <a class="navbar-brand" href="#about">Dylan Houston</a>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -34,10 +33,9 @@
                 </ul>
             </div>
         </nav>
-    </section>
 
     <!-- ABOUT SECTION -->
-    <div class="container-fluid bg-dark bg-gradient h-100 p-xl-5">
+    <div id="about" class="container-fluid bg-dark bg-gradient h-100 p-xl-5">
         <div class="row d-flex align-items-center h-100 justify-content-center">
             <div class="col-lg-9">
                 <div class="card" style="border-radius: 15px">
@@ -49,7 +47,7 @@
                             </div></span>
                             <div class="col-sm-9 ms-3 justify-content-center text-lg-start text-center">
                                 <span class="run-animation" style="color: black"><h5 class="mb-1">Dylan Houston</h5></span>
-                                <h6 class="mb-2 pb-2" style="color: rgb(58, 202, 58)"><span class="run-animation">Amateur</span> <span class="run-animation"></h6></span>
+                                <h6 class="mb-2 pb-2" style="color: rgb(58, 202, 58)"><span class="run-animation">Coder</span> <span class="run-animation">and</span> <span class="run-animation">Programmer</span></h6>
                                 <div class="d-flex rounded-3 p-3 mb-2" style="background-color: #efefef;">
                                     <div>
                                         <p class="small mb-1 about-card">
@@ -88,7 +86,7 @@
                                 <div class="d-flex pt-1">
                                     <button type="button" class="btn btn-light-sm me-1 flex-grow-1"
                                         onclick="relocate_resume()">
-                                        <span class="run-animation">Resume</span>
+                                        <span class="run-animation">Résumé</span>
                                     </button>
                                     <button type="button" class="btn btn-green flex-grow-1" onclick="relocate_email()">
                                         <span class="run-animation">Email Me</span>
@@ -101,9 +99,9 @@
             </div>
         </div>
     </div>
+
     <!-- PROJECT SECTION -->
-    <section id="projects">
-        <div class="container-fluid align-items-center text-center bg-dark bg-gradient">
+        <div id="projects" class="container-fluid align-items-center text-center bg-dark bg-gradient">
             <div class="row justify-content-center">
                 <h1 class="m-4 text-white"><u>Take a look at some of my projects</u></h1>
             </div>
@@ -185,11 +183,9 @@
             </div>
             <a class="btn btn-lg btn-light m-3" href="https://codepen.io/oFakeee/pens/public" target="_blank" role="button">Show more</a>
         </div>
-    </section>
 
     <!-- CONTACT SECTION -->
-    <section id="contact">
-        <div class="container-fluid text-center bg-black bg-gradient h-75 pt-xxl-5">
+        <div id="contact" class="container-fluid text-center bg-black bg-gradient h-50 pt-xxl-5">
             <div class="container text-white p-5">
                 <h1 class="">Contact Me</h1>
                 <p><em>Lets work together...</em></p>
@@ -211,7 +207,6 @@
                     </a>
                 </div>
             </div>
-    </section>
 </body>
 
 </html>
