--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                 <div class="row align-items-center gap-3 p-3">
                     <div class="col-sm">
                         <div class="card bg-blue text-white projects">
-                            <a class="card-links" href="https://codepen.io/oFakeee/pen/LYEjPya" target="_blank">
+                            <a class="card-links" href="https://github.com/DylanMH/ReactCalc" target="_blank">
                             <div class="card-body">
-                                <h5 class="card-title"><span class="code">&lt;</span>Calculator<span
+                                <h5 class="card-title"><span class="code">&lt;</span>React App<span
                                         class="code">&#47;&gt;</span></h5>
                             </div>
                             <img class="card-image-bottom img-sizing" src="assets\pictures\calculator.png"
@@ -123,7 +123,7 @@
                         <div class="card bg-blue text-white projects">
                             <a class="card-links" href="https://github.com/DylanMH/MixCalculatorApp" target="_blank">
                                 <div class="card-body">
-                                    <h5 class="card-title"><span class="code">&lt;</span>Construction App<span
+                                    <h5 class="card-title"><span class="code">&lt;</span>Python App<span
                                             class="code">&#47;&gt;</span></h5>
                                 </div>
                                 <img class="card-image-bottom img-sizing" src="assets\pictures\constructionapp.png"
