--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <h5 class="card-title"><span class="code">&lt;</span>React App<span
                                         class="code">&#47;&gt;</span></h5>
                             </div>
-                            <img class="card-image-bottom img-sizing" src="assets\pictures\calculator.png"
+                            <img class="card-image-bottom img-sizing" src="assets\pictures\mainscreen.png"
                                 alt="card image">
                         </div></a>
                     </div>
